[package]
name = "cn"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
toml = "0.7"

[dependencies.axum]
version = "0.6"
default-features = false
features = ["http1", "tokio"]
